<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.SignupActivity">


        <RelativeLayout
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_view_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_logo" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_below="@id/image_view_logo"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="@string/logo_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    app:fontFamily="casual" android:textStyle="bold" android:textAllCaps="false"
                    android:typeface="monospace" android:textColor="@color/teal_200"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:padding="18dp"
                android:background="@color/white"
                android:layout_below="@id/linearLayout1"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_text_name"
                    android:hint="@string/hint_sign_up_name"
                    android:inputType="text"
                    android:drawablePadding="16dp"
                    android:drawableLeft="@drawable/ic_name"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:layout_width="match_parent"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/edit_text_email"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:drawablePadding="16dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:layout_width="match_parent"
                    android:padding="12dp"
                    android:layout_marginBottom="12dp"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/edit_text_password"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password"
                    android:drawablePadding="16dp"
                    android:drawableLeft="@drawable/ic_lock"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="12dp"
                    android:padding="12dp"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/edit_text_password_confirm"
                    android:inputType="textPassword"
                    android:hint="@string/hint_password"
                    android:drawablePadding="16dp"
                    android:drawableLeft="@drawable/ic_lock"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:layout_width="match_parent"
                    android:layout_marginBottom="12dp"
                    android:padding="12dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/text_view_forget_password"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="12dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:text="@string/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/button_sign_up"
                    android:layout_gravity="center_horizontal"
                    android:textAllCaps="false"
                    android:text="@string/btn_sign_up"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@+id/text_view_login"
                android:layout_marginTop="12dp"
                android:textColor="@color/colorPrimary"
                android:layout_centerHorizontal="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_below="@id/linearLayout2"
                android:textAlignment="center"
                android:text="@string/msg_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <ProgressBar
            android:visibility="invisible"
            android:id="@+id/progress_bar"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
