<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<!--    Declare the ViewModel we are using (name can be anything) -->
    <data>
        <variable
            name="viewmodel"
            type="org.wit.gaa_referee_app.ui.auth.AuthViewModel" />
    </data>
    <androidx.coordinatorlayout.widget.CoordinatorLayout

        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.auth.LoginActivity">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/image_view_logo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_logo"
                android:backgroundTint="@color/colorPrimaryDark"/>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/image_view_logo"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/logo_name"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="bold"
                    android:typeface="monospace"
                    app:fontFamily="casual" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout1"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="18dp">

                <EditText
                    android:text="@={viewmodel.email}"
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="16dp"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="12dp" />

                <EditText
                    android:text="@={viewmodel.password}"
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/edit_text_round_gray_background"
                    android:drawableLeft="@drawable/ic_lock"
                    android:drawablePadding="16dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:padding="12dp" />

                <TextView
                    android:id="@+id/text_view_forget_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:text="@string/forgot_password"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorPrimaryDark" />

<!--                input the onClick function name -->
                <Button
                    android:onClick="@{viewmodel::onLoginButtonClick}"
                    android:id="@+id/button_sign_in"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/btn_sign_in"
                    android:textAllCaps="false" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_view_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linearLayout2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="@string/msg_sign_up"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="invisible" />


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>